# gimbal

./: .gitignore  LICENSE  README.md  installation.md  requirements.txt  setup.cfg
examples/s1-d1/: meta.md  run.py  s1-d1_params.npz  skeleton.yml
gimbal/: __init__.py  distributions.py  load.py  mcmc.py  model.py  run.py  script.py  util.py  util_io.py
scripts/s1-d1/: config.yml
src/gimbal/: distributions.py
tests/: context.py  mock_data.npz  mock_params.npz  test_distributions.py  test_mcmc.py  test_util.py
