[metadata]
name = gimbal
version = 0.0.1
description = Animal pose estimation via h-vMFG model
author = Libby Zhang
author_email = eyz@stanford.edu
url = https://github.com/ezhang94/gimbal

[options]
packages = gimbal
install_requires =
    python >= 3.5
    jax
    jaxlib
    numpy
    scipy
    tensorflow-probability
    h5py