[metadata]
name = gimbal
version = 0.0.1
description = Animal pose estimation via h-vMFG model
author = Libby Zhang
author_email = eyz@stanford.edu
url = https://github.com/ezhang94/gimbal

[options]
packages = gimbal
install_requires =
    jax==0.2.13
    jaxlib==0.1.67
    tfp-nightly[jax]==0.14.0.dev20210610
    cython>=0.29.23
    ssm
    numpy>=1.19.5
    scipy>=1.5.4
    h5py>=3.1.0
    pyyaml>=5.4.1